Bug #46830
mds: do not raise "client failing to respond to cap release" when client working set is reasonable
% Done:
0%
Source:
Development
Tags:
Backport:
octopus,nautilus
Regression:
No
Severity:
3 - minor
Reviewed:
Description
If a client has more than mds_min_caps_per_client caps pinned due to open files and the MDS is trying to recall caps because the client appears quiescent, we see unnecessary "client failing to respond to cap release" messages from the MDS.
Change Beacon to not send this warning if the client's caps is below some larger threshold (like 10k).
Related issues
History
#1 Updated by Patrick Donnelly 6 months ago
- Status changed from New to In Progress
#2 Updated by Patrick Donnelly 6 months ago
- Status changed from In Progress to Fix Under Review
- Pull request ID set to 36501
#3 Updated by Patrick Donnelly 6 months ago
- Status changed from Fix Under Review to Pending Backport
#4 Updated by Patrick Donnelly 6 months ago
- Copied to Backport #46859: octopus: mds: do not raise "client failing to respond to cap release" when client working set is reasonable added
#5 Updated by Patrick Donnelly 6 months ago
- Copied to Backport #46860: nautilus: mds: do not raise "client failing to respond to cap release" when client working set is reasonable added
#6 Updated by Nathan Cutler 3 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".